--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "socket.io": "^4.7.2"
   }
